fix: align splash text right

--- a/_sass/components/_splash.scss
+++ b/_sass/components/_splash.scss
@@ -4,7 +4,7 @@
   /* Add a pulsating animation */
   animation: pulse 1s infinite;
   /* Center the text */
-  text-align: center;
+  text-align: right;
   /* Remove the underline */
   text-decoration: none;
   color: yellow;
